Istio-Portfolio-Project/src/istio-config/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: myapp-service
        port:
          number: 80
